benchmarks for the gpt-oss and working on the setup process

--- a/packages/knowhow/autodoc/plugins/downloader/downloader.mdx
+++ b/packages/knowhow/autodoc/plugins/downloader/downloader.mdx
@@ -25,7 +25,7 @@ The Downloader Plugin is a comprehensive tool designed to facilitate the downloa
 
 To ensure the plugin functions correctly, the following environment variables must be set:
 
-- **OPENAI_API_KEY**: This variable is required to authenticate requests to the OpenAI API for transcription services.
+- **OPENAI_KEY**: This variable is required to authenticate requests to the OpenAI API for transcription services.
 
 ## Usage Scenarios
 
